fix nav vertical spacing

--- a/_scss/nav.scss
+++ b/_scss/nav.scss
@@ -53,7 +53,6 @@
 }
 
 .nav-ul {
-  padding-top: rem(30px);
   list-style: none;
   @include media(medium) {
     display: none;
